--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cloudinary": "^1.28.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^10.0.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.5",
