--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "mongoose": "^6.1.5",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
-    "nodemailer": "^6.7.2"
+    "nodemailer": "^6.7.2",
+    "sass": "^1.49.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
