--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
+    "watch": "node-sass --watch src/public/scss --output src/public/css/page-css",
     "dev": "nodemon index.js"
   },
   "author": "",
@@ -26,6 +27,7 @@
     "sass": "^1.49.7"
   },
   "devDependencies": {
+    "node-sass": "^7.0.1",
     "nodemon": "^2.0.15"
   }
 }
