--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "watch": "node-sass --watch src/public/scss --output src/public/css/page-css",
+    "watch": "node-sass --watch src/public/admin-scss --output src/public/css/admin-css",
     "dev": "nodemon index.js"
   },
   "author": "",
